--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
                     <!-- Champs cachés pour FormSubmit -->
                     <input type="hidden" name="_subject" value="Nouveau litige - Demecall">
                     <input type="hidden" name="_captcha" value="false">
-                    <input type="hidden" name="_next" value="services.html"> <!-- Optionnel : page de remerciement -->
+                    <input type="hidden" name="_next" value="index.html"> <!-- Optionnel : page de remerciement -->
  
                     <!-- Champs du formulaire (identiques à ton code original) -->
                     <div class="form-group">
@@ -139,5 +139,6 @@
     </script>
 </body>
 </html>
+
 
 
