--- a/services.html
+++ b/services.html
@@ -5,23 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nos Services - LitigeDemecall</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Style pour les cartes de services (si non défini dans style.css) */
+        .service-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .service-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .service-card div {
+            font-size: 40px;
+            margin-bottom: 15px;
+        }
+        .service-card h3 {
+            color: #007BFF;
+            margin-bottom: 10px;
+        }
+        .service-card p {
+            color: #666;
+            line-height: 1.5;
+        }
+        /* Style pour les onglets "En travaux" */
+        .en-travaux {
+            color: #999 !important;
+            cursor: not-allowed;
+        }
+        .en-travaux:hover {
+            color: #999 !important;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
     <header>
        <nav class="container">
-    <a href="index.html" class="logo">
-        <img src="logo.png" alt="Logo Demecall">
-    </a>
-  <ul class="nav-links">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Logo Demecall">
+            </a>
+            <ul class="nav-links">
                 <li><a href="services.html">Nos Services</a></li>
                 <li><a href="tarifs.html">Tarifs</a></li>
-                <li><a href="en-travaux.html" class="active">Avis Clients</a></li>
-                <li><a href="en-travaux.html" class="active">Avis Déménageurs</a></li>
+                <li><a href="en-travaux.html" class="en-travaux">Avis Clients</a></li>
+                <li><a href="en-travaux.html" class="en-travaux">Avis Déménageurs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-    <a href="contact.html" class="cta-button">Déposer mon dossier</a>
-</nav>
+            <a href="contact.html" class="cta-button">Déposer mon dossier</a>
+        </nav>
     </header>
 
     <!-- Hero Section -->
@@ -37,25 +73,64 @@
         <div class="container">
             <h2>Nos Services</h2>
             <div class="service-grid">
+                <!-- Carte 1 : Casse et Dommages -->
                 <div class="service-card">
                     <div>📦</div>
                     <h3>Casse et Dommages</h3>
                     <p>Votre mobilier est arrivé brisé ? Même sans réserves parfaites, nous activons la responsabilité du transporteur.</p>
                 </div>
+
+                <!-- Carte 2 : Retards et No-Show -->
                 <div class="service-card">
                     <div>⏰</div>
                     <h3>Retards et No-Show</h3>
                     <p>Le camion n'est jamais venu ? Nous exigeons le remboursement immédiat et des dommages et intérêts.</p>
                 </div>
+
+                <!-- Carte 3 : Litiges Facturation -->
                 <div class="service-card">
                     <div>💰</div>
                     <h3>Litiges Facturation</h3>
                     <p>Le prix a doublé à l'arrivée ? Nous bloquons les pratiques abusives et les chantages au déchargement.</p>
                 </div>
+
+                <!-- Carte 4 : Travail dissimulé -->
                 <div class="service-card">
                     <div>🕵️</div>
                     <h3>Travail dissimulé</h3>
                     <p>Vous avez découvert que votre déménageur n'est pas déclaré ? Nous sécurisons votre situation juridique.</p>
+                </div>
+
+                <!-- NOUVELLE CARTE : Clauses et Devis Non Respectés -->
+                <div class="service-card">
+                    <div>📄</div>
+                    <h3>Clauses et Devis Non Respectés</h3>
+                    <p>Emballage non fourni, livraison incomplète, ou fournitures manquantes ? Nous veillons au respect strict des engagements contractuels : emballage, livraison dans les délais, et fournitures conformes au devis.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section supplémentaire pour expliquer le service "Clauses et Devis Non Respectés" -->
+    <section class="service-details">
+        <div class="container">
+            <h2>Clauses et Devis Non Respectés : Ce que nous faisons</h2>
+            <div class="details-grid">
+                <div class="detail-item">
+                    <h3>Emballage non conforme</h3>
+                    <p>Si le déménageur n'a pas utilisé les matériaux d'emballage promis (cartons renforcés, protections, etc.), nous exigeons un remboursement ou une compensation.</p>
+                </div>
+                <div class="detail-item">
+                    <h3>Livraison incomplète</h3>
+                    <p>Des meubles ou cartons manquants ? Nous identifions les responsabilités et obtenons une indemnisation pour les objets perdus ou endommagés.</p>
+                </div>
+                <div class="detail-item">
+                    <h3>Fournitures manquantes</h3>
+                    <p>Si des fournitures promises (sangles, couvertures, etc.) n'ont pas été utilisées, nous réclamons leur valeur ou un dédommagement.</p>
+                </div>
+                <div class="detail-item">
+                    <h3>Délais non respectés</h3>
+                    <p>Un retard de livraison peut causer des désagréments. Nous évaluons les préjudices et négociions des compensations financières.</p>
                 </div>
             </div>
         </div>
@@ -94,6 +169,28 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Style supplémentaire pour la section des détails -->
+    <style>
+        .service-details {
+            background: #f8f9fa;
+            padding: 40px 0;
+        }
+        .details-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .detail-item {
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .detail-item h3 {
+            color: #007BFF;
+            margin-bottom: 10px;
+        }
+    </style>
 </body>
 </html>
