--- a/tarifs.html
+++ b/tarifs.html
@@ -3,53 +3,190 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nos Tarifs - LitigeDemecall</title>
+    <title>Nos Services - LitigeDemecall</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        /* Styles pour les services et témoignages */
+        .service-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .service-card {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        .service-card div {
+            font-size: 40px;
+            margin-bottom: 15px;
+        }
+        .service-card h3 {
+            color: #007BFF;
+            margin-bottom: 10px;
+        }
+        .testimonials {
+            background: #f8f9fa;
+            padding: 40px 0;
+            margin-top: 40px;
+        }
+        .testimonial-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .testimonial-item {
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+        .testimonial-item::before {
+            content: '"';
+            font-size: 50px;
+            color: #007BFF;
+            position: absolute;
+            top: 5px;
+            left: 10px;
+        }
+        .testimonial-author {
+            font-weight: bold;
+            margin-top: 15px;
+            color: #007BFF;
+        }
+        .en-travaux {
+            color: #999 !important;
+            cursor: not-allowed;
+        }
+    </style>
 </head>
 <body>
     <!-- Header -->
     <header>
        <nav class="container">
-    <a href="index.html" class="logo">
-        <img src="logo.png" alt="Logo Demecall">
-    </a>
-    <ul class="nav-links">
+            <a href="index.html" class="logo">
+                <img src="logo.png" alt="Logo Demecall">
+            </a>
+            <ul class="nav-links">
                 <li><a href="services.html">Nos Services</a></li>
                 <li><a href="tarifs.html">Tarifs</a></li>
-                <li><a href="en-travaux.html" class="active">Avis Clients</a></li>
-                <li><a href="en-travaux.html" class="active">Avis Déménageurs</a></li>
+                <li><a href="en-travaux.html" class="en-travaux">Avis Clients</a></li>
+                <li><a href="en-travaux.html" class="en-travaux">Avis Déménageurs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-    <a href="contact.html" class="cta-button">Déposer mon dossier</a>
-</nav>
+            <a href="contact.html" class="cta-button">Déposer mon dossier</a>
+        </nav>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
-            <h1>Nos Tarifs</h1>
-            <p>Une expertise professionnelle pour un résultat concret.</p>
+            <h1>Nos Domaines d'Intervention</h1>
+            <p>Nous intervenons sur tous les types de litiges liés au déménagement.</p>
         </div>
     </section>
 
-    <!-- Pricing Section -->
-    <section class="pricing">
+    <!-- Services Section -->
+    <section class="services">
         <div class="container">
-            <h2>Audit & Tarifs</h2>
-            <p class="pricing-subtitle">Nous proposons un tarif transparent et sans surprise.</p>
-            <div class="pricing-card">
-                <h3>Le Pack Assistance</h3>
-                <ul class="pricing-features">
-                    <li>Analyse juridique du devis</li>
-                    <li>Vérification de la licence du transporteur</li>
-                    <li>Rédaction de la mise en demeure par un expert</li>
-                    <li>Suivi téléphonique avec l'assurance</li>
-                </ul>
-                <div class="price">199 € (Frais d'ouverture de dossier)</div>
-                <div class="success-message">
-                    Nous ne percevons une commission sur le résultat que si vous êtes remboursé.
+            <h2>Nos Services</h2>
+            <div class="service-grid">
+                <!-- Carte 1 : Casse et Dommages -->
+                <div class="service-card">
+                    <div>📦</div>
+                    <h3>Casse et Dommages</h3>
+                    <p>Votre mobilier est arrivé brisé ? Même sans réserves parfaites, nous activons la responsabilité du transporteur.</p>
                 </div>
-                <a href="contact.html" class="cta-button">Lancer mon recours</a>
+                <!-- Carte 2 : Retards et No-Show -->
+                <div class="service-card">
+                    <div>⏰</div>
+                    <h3>Retards et No-Show</h3>
+                    <p>Le camion n'est jamais venu ? Nous exigeons le remboursement immédiat et des dommages et intérêts.</p>
+                </div>
+                <!-- Carte 3 : Litiges Facturation -->
+                <div class="service-card">
+                    <div>💰</div>
+                    <h3>Litiges Facturation</h3>
+                    <p>Le prix a doublé à l'arrivée ? Nous bloquons les pratiques abusives et les chantages au déchargement.</p>
+                </div>
+                <!-- Carte 4 : Travail dissimulé -->
+                <div class="service-card">
+                    <div>🕵️</div>
+                    <h3>Travail dissimulé</h3>
+                    <p>Vous avez découvert que votre déménageur n'est pas déclaré ? Nous sécurisons votre situation juridique.</p>
+                </div>
+                <!-- Carte 5 : Clauses et Devis Non Respectés -->
+                <div class="service-card">
+                    <div>📄</div>
+                    <h3>Clauses et Devis Non Respectés</h3>
+                    <p>Emballage non fourni, livraison incomplète, ou fournitures manquantes ? Nous veillons au respect strict des engagements contractuels.</p>
+                </div>
+                <!-- Carte 6 : Audit Préalable -->
+                <div class="service-card">
+                    <div>🔍</div>
+                    <h3>Audit Préalable</h3>
+                    <p>Avant de signer, nous vérifions les clauses abusives, les licences du déménageur et les garanties proposées.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Section Audit -->
+    <section class="audit-section">
+        <div class="container">
+            <h2>Notre Processus d'Audit</h2>
+            <p>Un accompagnement complet pour sécuriser votre déménagement et résoudre les litiges.</p>
+            <div class="audit-steps">
+                <div class="step">
+                    <h3>1. Analyse du contrat</h3>
+                    <p>Nous vérifions les clauses abusives, les garanties et les engagements du déménageur.</p>
+                </div>
+                <div class="step">
+                    <h3>2. Vérification des licences</h3>
+                    <p>Nous contrôlons que le déménageur est bien déclaré et assuré.</p>
+                </div>
+                <div class="step">
+                    <h3>3. Mise en demeure</h3>
+                    <p>Si nécessaire, nous envoyons une mise en demeure formelle pour obtenir réparation.</p>
+                </div>
+                <div class="step">
+                    <h3>4. Négociation</h3>
+                    <p>Nous négociions avec le déménageur pour obtenir une indemnisation juste.</p>
+                </div>
+                <div class="step">
+                    <h3>5. Recours juridique</h3>
+                    <p>En dernier recours, nous engageons des actions en justice si nécessaire.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Témoignages Clients -->
+    <section class="testimonials">
+        <div class="container">
+            <h2>Ils nous font confiance</h2>
+            <div class="testimonial-grid">
+                <div class="testimonial-item">
+                    <p>Grâce à LitigeDemecall, j’ai récupéré 1 200 € pour des meubles endommagés pendant mon déménagement. Leur équipe a été réactive et professionnelle !</p>
+                    <div class="testimonial-author">— Marie L., Paris</div>
+                </div>
+                <div class="testimonial-item">
+                    <p>Mon déménageur a doublé le prix à l’arrivée. LitigeDemecall a négocié un remboursement partiel et m’a évité un stress énorme. Je recommande !</p>
+                    <div class="testimonial-author">— Thomas R., Lyon</div>
+                </div>
+                <div class="testimonial-item">
+                    <p>Le camion n’est jamais venu le jour J. Grâce à leur mise en demeure, j’ai obtenu un remboursement intégral sous 10 jours. Merci !</p>
+                    <div class="testimonial-author">— Sophie M., Bordeaux</div>
+                </div>
+                <div class="testimonial-item">
+                    <p>Ils ont détecté des clauses abusives dans mon contrat avant que je ne signe. J’ai évité une mauvaise surprise !</p>
+                    <div class="testimonial-author">— Pierre D., Marseille</div>
+                </div>
             </div>
         </div>
     </section>
@@ -87,6 +224,27 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Styles supplémentaires pour les sections ajoutées -->
+    <style>
+        .audit-section {
+            padding: 40px 0;
+            background: white;
+        }
+        .audit-steps {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
+        }
+        .step {
+            background: #f8f9fa;
+            padding: 15px;
+            border-radius: 8px;
+        }
+        .step h3 {
+            color: #007BFF;
+            margin-bottom: 10px;
+        }
+    </style>
 </body>
 </html>
