--- a/tarifs.html
+++ b/tarifs.html
@@ -6,7 +6,7 @@
     <title>Nos Tarifs - LitigeDemecall</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        /* Styles pour les tarifs et témoignages */
+        /* Styles pour les tarifs */
         .pricing {
             padding: 40px 0;
         }
@@ -16,7 +16,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             max-width: 800px;
-            margin: 0 auto;
+            margin: 20px auto;
         }
         .pricing-features {
             list-style: none;
@@ -44,41 +44,6 @@
             border-radius: 5px;
             margin: 20px 0;
             color: #2E7D32;
-        }
-        .testimonials {
-            background: #f8f9fa;
-            padding: 40px 0;
-            margin-top: 40px;
-        }
-        .testimonial-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .testimonial-item {
-            background: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            position: relative;
-        }
-        .testimonial-item::before {
-            content: '"';
-            font-size: 50px;
-            color: #007BFF;
-            position: absolute;
-            top: 5px;
-            left: 10px;
-        }
-        .testimonial-author {
-            font-weight: bold;
-            margin-top: 15px;
-            color: #007BFF;
-        }
-        .en-travaux {
-            color: #999 !important;
-            cursor: not-allowed;
         }
     </style>
 </head>
@@ -124,7 +89,7 @@
                     <li>Conseils juridiques personnalisés</li>
                 </ul>
                 <div class="price">Gratuit</div>
-                <a href="contact.html" class="cta-button">Demander mon diagnostic</a>
+                <a href="contact.html?pack=diagnostic_gratuit" class="cta-button">Demander mon diagnostic</a>
             </div>
 
             <!-- Pack 2 : Mise en Demeure -->
@@ -140,7 +105,7 @@
                 <div class="success-message">
                     Ou 20 % des sommes récupérées (si succès).
                 </div>
-                <a href="contact.html" class="cta-button">Lancer mon recours</a>
+                <a href="contact.html?pack=mise_en_demeure" class="cta-button">Lancer mon recours</a>
             </div>
 
             <!-- Pack 3 : Recours Complet -->
@@ -157,7 +122,7 @@
                 <div class="success-message">
                     Ou 15 % des sommes récupérées (si succès).
                 </div>
-                <a href="contact.html" class="cta-button">Défendre mes droits</a>
+                <a href="contact.html?pack=recours_complet" class="cta-button">Défendre mes droits</a>
             </div>
 
             <!-- Pack 4 : Audit Préalable -->
@@ -173,40 +138,7 @@
                 <div class="success-message">
                     Évitez les mauvaises surprises avant de signer !
                 </div>
-                <a href="contact.html" class="cta-button">Sécuriser mon déménagement</a>
-            </div>
-        </div>
-    </section>
-
-    <!-- Témoignages Clients -->
-    <section class="testimonials">
-        <div class="container">
-            <h2>Nos Clients Témoignent</h2>
-            <div class="testimonial-grid">
-                <div class="testimonial-item">
-                    <p>Grâce à LitigeDemecall, j’ai récupéré 1 200 € pour des meubles endommagés. Leur équipe a été réactive et professionnelle !</p>
-                    <div class="testimonial-author">— Marie L., Paris</div>
-                </div>
-                <div class="testimonial-item">
-                    <p>Mon déménageur a doublé le prix à l’arrivée. LitigeDemecall a négocié un remboursement partiel et m’a évité un stress énorme. Je recommande !</p>
-                    <div class="testimonial-author">— Thomas R., Lyon</div>
-                </div>
-                <div class="testimonial-item">
-                    <p>Le camion n’est jamais venu le jour J. Grâce à leur mise en demeure, j’ai obtenu un remboursement intégral sous 10 jours. Merci !</p>
-                    <div class="testimonial-author">— Sophie M., Bordeaux</div>
-                </div>
-                <div class="testimonial-item">
-                    <p>Ils ont détecté des clauses abusives dans mon contrat avant que je ne signe. J’ai évité une mauvaise surprise !</p>
-                    <div class="testimonial-author">— Pierre D., Marseille</div>
-                </div>
-                <div class="testimonial-item">
-                    <p>Un service rapide et efficace. J’ai récupéré 800 € pour un retard de livraison. Très satisfait !</p>
-                    <div class="testimonial-author">— Jean P., Toulouse</div>
-                </div>
-                <div class="testimonial-item">
-                    <p>L’équipe a été à l’écoute et a résolu mon litige en moins d’une semaine. Je les recommande sans hésiter.</p>
-                    <div class="testimonial-author">— Claire T., Nantes</div>
-                </div>
+                <a href="contact.html?pack=audit_prealable" class="cta-button">Sécuriser mon déménagement</a>
             </div>
         </div>
     </section>
